force-app/main/default/objects/ExpoCountrysBazaar__c/ExpoCountrysBazaar__c.object-meta.xml
<CustomObject>
    <label>ExpoCountrysBazaar</label>
    <nameField>
        <label>Name CN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpoCountrysBazaars</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>