force-app/main/default/objects/ExpoCountrysBazaar__c/fields/Continent_CN__c.field-meta.xml
<CustomField>
    <fullName>Continent_CN__c</fullName>
    <formula>CASE(Continent__c, &quot;Africa&quot;, &quot;非洲&quot;, &quot;Asia&quot;, &quot;亚洲&quot;,&quot;Europe&quot;,&quot;欧洲&quot;,
&quot;North America&quot;,&quot;北美洲&quot;,&quot;South America&quot;,&quot;南美洲&quot;,&quot;Oceania&quot;,&quot;大洋洲&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continent CN</label>
    <type>Text</type>
</CustomField>