force-app/main/default/objects/ExpoCountrysBazaar__c/fields/Contrast_Region__c.field-meta.xml
<CustomField>
    <fullName>Contrast_Region__c</fullName>
    <label>Contrast Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIDAA</fullName>
            </value>
            <value>
                <fullName>视像科技公司</fullName>
            </value>
            <value>
                <fullName>家电集团</fullName>
            </value>
            <value>
                <fullName>中国区营销总部</fullName>
            </value>
            <value>
                <fullName>深圳信扬公司</fullName>
            </value>
            <value>
                <fullName>工业设计中心</fullName>
            </value>
            <value>
                <fullName>智慧生活产业集群/研发管理部</fullName>
            </value>
            <value>
                <fullName>集团公司</fullName>
            </value>
            <value>
                <fullName>信息科技公司,</fullName>
            </value>
            <value>
                <fullName>总部-HQ</fullName>
            </value>
            <value>
                <fullName>美洲-Americas Region</fullName>
            </value>
            <value>
                <fullName>中东非-MEA Region</fullName>
            </value>
            <value>
                <fullName>亚太-Asia-Pacific Region</fullName>
            </value>
            <value>
                <fullName>东盟-ASEAN</fullName>
            </value>
            <value>
                <fullName>欧洲-EU Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>