force-app/main/default/objects/ExpoCountrysBazaar__c/fields/NameEN__c.field-meta.xml
<CustomField>
    <fullName>NameEN__c</fullName>
    <label>Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>