force-app/main/default/objects/ExpoCountrysBazaar__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Asia-Pacific</fullName>
            </value>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>ASEAN</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>总部-HQ</fullName>
            </value>
            <value>
                <fullName>北美区-North America Region</fullName>
            </value>
            <value>
                <fullName>中东非-Middle East and Africa Region</fullName>
            </value>
            <value>
                <fullName>亚太区-Asia-Pacific Region</fullName>
            </value>
            <value>
                <fullName>东盟区-ASEAN Region</fullName>
            </value>
            <value>
                <fullName>欧洲区-Eurepean Region</fullName>
            </value>
            <value>
                <fullName>印度区-Inida Region</fullName>
            </value>
            <value>
                <fullName>中南美区-Central and South America Region</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
                <isActive>false</isActive>
                <label>Japan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>