force-app/main/default/objects/ExpoCountrysBazaar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NameEN__c</columns>
    <columns>Region__c</columns>
    <columns>Region_CN__c</columns>
    <columns>Continent__c</columns>
    <columns>Continent_CN__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>